# garmin-db

./: .gitignore  init_db.py  main.py  schema_data.sql  schema_scale.sql
client/: package.json
client/src/components/: Activities.vue  Ping.vue
client/src/router/: index.js
old/: Pipfile  get_overall.sql  main.py
server/: .env  .gitignore  Cargo.toml  Rocket.toml  readme.md
server/http_tests/: tests.http
server/migrations/2021-08-07-074339_create_activities/: down.sql  up.sql
server/migrations/2022-01-11-150149_elevation_scale/: down.sql  up.sql
server/src/: db.rs  garmin.rs  lib.rs  main.rs  routes.rs  schema.rs
server_bak/: app.py
templates/: entries.html
