[package]
name = "garmin-db-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = {version ="0.4",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = {version ="1.4.5", features = ["chrono", "postgres"]}
dotenv = "0.15"

[[bin]]
name = "read_csv"
path = "src/bin/read_csv.rs"
