[package]
name = "garmin-db-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = {version ="0.4",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = {version ="1.4.5", features = ["chrono", "postgres"]}
dotenv = "0.15"

[[bin]]
name = "read_csv"
path = "src/bin/read_csv.rs"

[[bin]]
name = "read_csv_and_insert"
path = "src/bin/read_csv_and_insert.rs"

[[bin]]
name = "show_activities"
path = "src/bin/show_activities.rs"