[package]
name = "garmin-db-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = {version ="0.4",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = {version ="1.4.5", features = ["chrono", "postgres"]}
dotenv = "0.15"
clap = { version = "3.0.6", features = ["derive"] }
rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "read_csv_and_insert"
path = "src/bin/read_csv_and_insert.rs"

[[bin]]
name = "show_activities"
path = "src/bin/show_activities.rs"

[[bin]]
name = "add_user"
path = "src/bin/add_user.rs"

[[bin]]
name = "get_totals"
path = "src/bin/get_totals.rs"